# stretchy

./: .gitignore  README.md  README_ID.md  README_JA.md  README_KO.md  README_MS.md  README_ZH.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.jsx  exercises.js  i18n.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_monitor.rs  main.rs
