[package]
name = "stretchy"
version = "0.1.0"
description = "Stretching reminder for LBP - monitors activity and reminds you to stretch"
authors = ["Ari"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "notification", "system-tray", "icon-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
